src/test/ui/closure_promotion.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/closure_promotion.rs:7:26
   |
LL |     let x: &'static _ = &|| { let z = 3; z };
   |                          ^^^^^^^^^^^^^^^^^^^ temporary value does not live long enough
LL | }
   | - temporary value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
